# zero

./: README.md
.github/workflows/: build.yml  release.yml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/binding/: app_binding.dart
app/lib/controller/: anime_controller.dart  resource_controller.dart
app/lib/core/dio/: dio_client.dart
app/lib/data/bgm/: bgm_mapper.dart  bgm_service.dart
app/lib/data/zero/: zero_mapper.dart  zero_service.dart
app/lib/extension/: size_extension.dart  string_extension.dart  theme_extension.dart
app/lib/model/: anime.dart  episode.dart  resource.dart
app/lib/player/: controller.dart  player.dart
app/lib/player/exception/: illegal_data.dart
app/lib/player/extension/: duration.dart
app/lib/player/model/: danmaku.dart  option.dart  video.dart
app/lib/player/widget/: bottom_bar.dart  top_bar.dart
app/lib/view/pages/: library_page.dart  login_page.dart  player_page.dart  resource_page.dart  search_page.dart  task_page.dart
app/lib/view/widget/: anime_grid.dart  image.dart  overlay_text.dart  rating_card.dart  (+2 more)
app/linux/runner/: my_application.cc
app/web/: index.html
app/windows/runner/: Runner.rc
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml
backend/app/: auth.py  config.py  db.py  main.py
backend/app/api/: anime.py  source.py  storage.py  user.py
scripts/: build_android.sh  build_apk.sh  build_ios.sh
(+3 files in other folders)
